tests/cases/parser/literals/characters/short_numeric_code.hash
// run=fail, stage=parse

k := '\x0';
